new embed video + updated css

--- a/styles/style.css
+++ b/styles/style.css
@@ -30,7 +30,7 @@ body {
   margin-top: 0px; /* Add some spacing from the content above */
 }
 
-.extravid {
+.video {
   display: flex;
   justify-content: center;
   align-items: center;
