--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
+/* Copyright Harrison Fluck 2024. All rights reserved */
+
 body {
   background-color: aliceblue;
   font-family: 'Roboto', 'sans-serif';
